samples/_failures_safe/1761271586_86f359_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d3718e82.c: In function ‘graph_bfs’:
./samples/SAFE/__tmp_d3718e82.c:160:13: error: expected declaration or statement at end of input
  160 |             }
      |             ^
./samples/SAFE/__tmp_d3718e82.c:160:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d3718e82.c:160:13: error: expected declaration or statement at end of input
